# ViSoR

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: stereodom.cfg
launch/: viodom.launch  visor.launch
msg/: kpt.msg
src/: ekfSlam.hpp  landmark.hpp  map.hpp  observation.hpp  slam_node.cpp  stereodom.hpp  viodom_node.cpp
